通过cookie里存用户账户的方式实现了获取当前用户，后续修改为session
